removed unessary files finished update / edit which writes to the database need to work on the check boxs, yes / no don't seam to be working
changed citys to cities where applicable, will probably change to city in the future.

--- a/branches/Aaron/approval/approval-war/web/authorisation.xhtml
+++ b/branches/Aaron/approval/approval-war/web/authorisation.xhtml
@@ -546,7 +546,7 @@
                                     <h:outputText value="Date: " />
                                 </p:column>
                                 <p:column>
-                                    <p:calendar id="authdate" value="#{authorisation.dateStamp.date}" showButtonPanel="true" navigator="true" required="true" requiredMessage="Required Field" />
+                                    <p:calendar id="authdate" value="#{authorisation.dateStamp}" showButtonPanel="true" navigator="true" required="true" requiredMessage="Required Field" />
 
                                 </p:column>
                                 <p:column>
