--- a/branches/travelProfile/travellerProfile/travellerProfile-war/web/viewTravelProfile.xhtml
+++ b/branches/travelProfile/travellerProfile/travellerProfile-war/web/viewTravelProfile.xhtml
@@ -41,6 +41,9 @@
                          <h:outputText value="Department: " />  
                          <h:outputText value="#{travel.profileRef.department}"/>                            
 
+                         <h:outputText value="Staff ID: " />  
+                         <h:outputText value="#{travel.profileRef.staffid}" />
+                            
                          <h:outputText value="Position: " />  
                          <h:outputText value="#{travel.profileRef.position}"  />                           
 
