--- a/branches/marco/Conf_att_request/Conf_att_request-war/web/view_edit.xhtml
+++ b/branches/marco/Conf_att_request/Conf_att_request-war/web/view_edit.xhtml
@@ -5,6 +5,7 @@
       xmlns:p="http://primefaces.org/ui"
       xmlns:f="http://java.sun.com/jsf/core">
     <h:head>
+        <h:outputStylesheet name="styles.css"/>
         <title>Facelet Title</title>
     </h:head>
     <h:body>
@@ -13,7 +14,7 @@
 
             <p:panel header="Conference Attendance Request Form">
                 <p:fieldset legend="Conference Details">
-                    <h:panelGrid columns="2">
+                    <h:panelGrid columns="2" columnClasses="label, value">
                         <h:outputLabel value="Conference Name:"  />  
                         <p:inplace editor="true">  
                             <p:inputText value="#{conference.confName}"/> 
@@ -36,10 +37,21 @@
 
                         <h:outputLabel value="Presenting a paper?"/>
                         <p:inplace editor="true"> 
-                            <p:selectOneRadio value="#{conference.paperOption}">
+                            <p:selectOneRadio value="#{conference.isPresenting}">
                                 <f:selectItem itemLabel="Yes" itemValue="1"/>
                                 <f:selectItem itemLabel="No" itemValue="2" />
+                                <p:ajax event="change" update="isPresentingGrid"/>
                             </p:selectOneRadio>
+
+                            <h:panelGrid columns="2" id="isPresentingGrid" columnClasses="label, value">
+                                <p:outputLabel rendered="#{conference.isPresenting eq '1'}" for="paperTitle" value="Title of paper:" title="Title of paper:"/>
+                                <p:inputText rendered="#{conference.isPresenting eq '1'}" id="paperTitle" value="#{conference.paperTitle}" required="true" title="Title of paper which you are presenting on"/>
+                                <p:outputLabel rendered="#{conference.isPresenting eq '1'}" for="author" value="Specify all authors and affiliations:"/>
+                                <h:inputTextarea rendered="#{conference.isPresenting eq '1'}" id="author" value="#{conference.author}" required="true"/>
+
+                                <p:outputLabel rendered="#{conference.isPresenting eq '2'}" for="specialReason" value="Special reason for attendance:"/>
+                                <p:inputText rendered="#{conference.isPresenting eq '2'}" id="specialReason" value="#{conference.specialReason}" required="true"/>
+                            </h:panelGrid>
                         </p:inplace>
 
                         <h:outputLabel value="Date of internal MSA presentation:"/>
@@ -50,7 +62,7 @@
                 </p:fieldset>
 
                 <p:fieldset legend="Conference Duration">
-                    <h:panelGrid columns="2">
+                    <h:panelGrid columns="2" columnClasses="label, value">
                         <h:outputLabel value="Date From:"/>
                         <p:inplace editor="true"> 
                             <p:calendar navigator="true" value="#{conference.fromDate}"/>
@@ -67,7 +79,13 @@
                                 <f:selectItem itemLabel="Yes" itemValue="yes" />
                                 <f:selectItem itemLabel="No" itemValue="no" />
                                 <f:selectItem itemLabel="N/A" itemValue="na" />
+                                <p:ajax event="change" update="coverOptionsGrid" />
                             </p:selectOneRadio>
+
+                            <h:panelGrid columns="2" id="coverOptionsGrid" columnClasses="label, value">
+                                <p:outputLabel rendered="#{conference.coverOptions eq 'yes'}" for="arrangements" value="Proposed arrangements to cover teaching commitments:"/>
+                                <h:inputTextarea rendered="#{conference.coverOptions eq  'yes'}" id="arrangements" value="#{conference.coverDetails}" required="true"/>
+                            </h:panelGrid>
                         </p:inplace>
                     </h:panelGrid>
 
