--- a/branches/marco/Conf_att_request/Conf_att_request-war/web/create.xhtml
+++ b/branches/marco/Conf_att_request/Conf_att_request-war/web/create.xhtml
@@ -15,7 +15,7 @@
                 <p:growl id="growl" sticky="true" showDetail="true"/>
 
                 <p:wizard widgetVar="conf_request"
-                          flowListener="#{conference.onFlowProcess}">
+                          flowListener="#{conference.onFlowProcess}" >
 
                     <p:tab id="personal" title="Personal">
                         <p:panel header="Personal Details">
@@ -42,42 +42,58 @@
                     <p:tab id="confDetails" title="Conference Details">
                         <p:panel header="Conference Details">
 
-                            <h:panelGrid columns="2" columnClasses="label, value">
+                            <h:panelGrid columns="3" columnClasses="label, value, error">
                                 <p:outputLabel for="confName" value="Conference Name:"/>
-                                <p:inputText id="confName" value="#{conference.confName}" required="true" title="What conference are you attending?"/>
-                                
-                                <p:outputLabel for="website" value="Web Adress:"/>
-                                <p:inputText id="website" value="#{conference.website}"/>
-                                    
+                                <p:inputText id="confName" value="#{conference.confName}" required="true" requiredMessage="Required Field"/>
+                                <p:message for="confName" />
+
+
+                                <p:outputLabel for="website" value="Web Address:"/>
+                                <p:inputText id="website" value="#{conference.website}" required="true" requiredMessage="Required Field"/>
+                                <p:message for="website" />
+
+
                                 <h:outputText value="Country:"/>
-                                <p:selectOneMenu value="#{conference.country}">
+                                <p:selectOneMenu value="#{conference.country}" required="true" requiredMessage="Required Field">
                                     <f:selectItem itemValue="country" itemLabel="South Africa"/>
                                 </p:selectOneMenu>
+                                <br />
 
                                 <p:outputLabel for="city" value="City/State:"/>
-                                <p:inputText id="city" value="#{conference.city}"/>
+                                <p:inputText id="city" value="#{conference.city}" required="true" requiredMessage="Required Field"/>
+                                <p:message for="city" />
 
                                 <h:outputText value="Are you presenting a paper?"/>
-                                <p:selectOneRadio id="isPresenting" value="#{conference.isPresenting}" required="true" >
+                                <p:selectOneRadio id="isPresenting" value="#{conference.isPresenting}" required="true" requiredMessage="Required Field">
                                     <f:selectItem itemLabel="Yes" itemValue="1"/>
                                     <f:selectItem itemLabel="No" itemValue="2" />
                                     <p:ajax event="change" update="isPresentingGrid"/>
                                 </p:selectOneRadio>
+                                <p:message for="isPresenting" />
                             </h:panelGrid>
 
-                            <h:panelGrid columns="2" id="isPresentingGrid" columnClasses="label, value">
+                            <h:panelGrid columns="3" id="isPresentingGrid" columnClasses="label, value, error">
                                 <p:outputLabel rendered="#{conference.isPresenting eq '1'}" for="paperTitle" value="Title of paper:" title="Title of paper:"/>
-                                <p:inputText rendered="#{conference.isPresenting eq '1'}" id="paperTitle" value="#{conference.paperTitle}" required="true" title="Title of paper which you are presenting on"/>
+                                <p:inputText rendered="#{conference.isPresenting eq '1'}" id="paperTitle" value="#{conference.paperTitle}" required="true" requiredMessage="Required Field"/>
+                                <p:message for="paperTitle" />
+
+
                                 <p:outputLabel rendered="#{conference.isPresenting eq '1'}" for="author" value="Specify all authors and affiliations:"/>
-                                <h:inputTextarea rendered="#{conference.isPresenting eq '1'}" id="author" value="#{conference.author}" required="true"/>
+                                <h:inputTextarea rendered="#{conference.isPresenting eq '1'}" id="author" value="#{conference.author}" required="true" requiredMessage="Required Field"/>
+                                <p:message for="author" />
+                                <br />
 
                                 <p:outputLabel rendered="#{conference.isPresenting eq '2'}" for="specialReason" value="Special reason for attendance:"/>
-                                <p:inputText rendered="#{conference.isPresenting eq '2'}" id="specialReason" value="#{conference.specialReason}" required="true"/>
+                                <p:inputText rendered="#{conference.isPresenting eq '2'}" id="specialReason" value="#{conference.specialReason}" required="true" requiredMessage="Required Field"/>
+                                <p:message for="specialReason" />
+
                             </h:panelGrid>
 
-                            <h:panelGrid columns="2" columnClasses="label, value">
+                            <h:panelGrid columns="3" columnClasses="label, value, error">
                                 <p:outputLabel for="presentationDate" value="Date of internal MSA presentation:"/>
-                                <p:calendar id="presentationDate" value="#{conference.presentationDate}" navigator="true" showOn="button" required="true"/>
+                                <p:calendar id="presentationDate" value="#{conference.presentationDate}" navigator="true" showOn="button" required="true" requiredMessage="Required Field"/>
+                                <p:message for="presentationDate" />
+
                             </h:panelGrid>
 
                         </p:panel>
@@ -86,28 +102,34 @@
                     <p:tab id="confDuration" title="Conference Duration">
                         <p:panel header="Conference Duration">
 
-                            <h:panelGrid columns="2" columnClasses="label, value">
+                            <h:panelGrid columns="3" columnClasses="label, value, error">
                                 <p:outputLabel for="fromDate" value="Date From:"/>
-                                <p:calendar id="fromDate" value="#{conference.toDate}" navigator="true" showOn="button" required="true"/>
+                                <p:calendar id="fromDate" value="#{conference.toDate}" navigator="true" showOn="button" required="true" requiredMessage="Required Field"/>
+                                <p:message for="fromDate" />
 
                                 <p:outputLabel for="toDate" value="Date To:"/>
-                                <p:calendar id="toDate" value="#{conference.fromDate}" navigator="true" showOn="button" required="true"/>
+                                <p:calendar id="toDate" value="#{conference.fromDate}" navigator="true" showOn="button" required="true" requiredMessage="Required Field"/>
+                                <p:message for="toDate" />
 
                                 <p:outputLabel for="diffDays" value="Days:"/>
-                                <p:inputText id="diffDays" value="#{conference.diffDays}"/>
+                                <p:inputText id="diffDays" value="#{conference.diffDays}" readonly="true" requiredMessage="Required Field"/>
+                                <br />
 
                                 <h:outputText value="Do you need coverage for teaching commitments?" />
-                                <p:selectOneRadio id="coverOptions" value="#{conference.coverOptions}" required="true">
+                                <p:selectOneRadio id="coverOptions" value="#{conference.coverOptions}" required="true" requiredMessage="Required Field">
                                     <f:selectItem itemLabel="Yes" itemValue="yes" />
                                     <f:selectItem itemLabel="No" itemValue="no" />
                                     <f:selectItem itemLabel="N/A" itemValue="na" />
                                     <p:ajax event="change" update="coverOptionsGrid" />
                                 </p:selectOneRadio>
+                                <p:message for="coverOptions" />
+
                             </h:panelGrid>
 
-                            <h:panelGrid columns="2" id="coverOptionsGrid" columnClasses="label, value">
+                            <h:panelGrid columns="3" id="coverOptionsGrid" columnClasses="label, value, error">
                                 <p:outputLabel rendered="#{conference.coverOptions eq 'yes'}" for="arrangements" value="Proposed arrangements to cover teaching commitments:"/>
-                                <h:inputTextarea rendered="#{conference.coverOptions eq  'yes'}" id="arrangements" value="#{conference.coverDetails}" required="true"/>
+                                <h:inputTextarea rendered="#{conference.coverOptions eq  'yes'}" id="arrangements" value="#{conference.coverDetails}" required="true" requiredMessage="Required Field"/>
+                                <p:message for="arrangements" />
                             </h:panelGrid>
                         </p:panel>
                     </p:tab>
@@ -116,27 +138,32 @@
                     <p:tab id="funding" title="Funding">
                         <p:panel header="Funding">
 
-                            <h:panelGrid columns="2" columnClasses="label, value">
+                            <h:panelGrid columns="3" columnClasses="label, value, error">
                                 <p:outputLabel for="fundingOptions" value="Sources of funding:"/>
-                                <p:selectOneRadio id="fundingOptions" value="#{conference.fundingOptions}" required="true">
-                                    <f:selectItem itemLabel="School/Admin Unit" itemValue="1" />
-                                    <f:selectItem itemLabel="Research Grant" itemValue="2" />
-                                    <f:selectItem itemLabel="Other (Specify below)" itemValue="3" />
+                                <p:selectOneRadio id="fundingOptions" value="#{conference.fundingOptions}" required="true" requiredMessage="Required Field">
+                                    <f:selectItem itemLabel="School/Admin Unit" itemValue="School/Admin Unit" />
+                                    <f:selectItem itemLabel="Research Grant" itemValue="Research Grant" />
+                                    <f:selectItem itemLabel="Other (Specify below)" itemValue="Other" />
                                     <p:ajax event="change" update="fundingOptionsGrid"/>
                                 </p:selectOneRadio>
+                                <p:message for="fundingOptions" />
                             </h:panelGrid>
 
-                            <h:panelGrid columns="2" id="fundingOptionsGrid" columnClasses="label, value">
-                                <p:outputLabel rendered="#{conference.fundingOptions eq '3'}" for="otherSources" value="Other sources of funding:"/>
-                                <p:inputText rendered="#{conference.fundingOptions eq '3'}" id="otherSources" value="#{conference.otherFunding}" required="true"/>
+                            <h:panelGrid columns="3" id="fundingOptionsGrid" columnClasses="label, value, error">
+                                <p:outputLabel rendered="#{conference.fundingOptions eq 'Other'}" for="otherSources" value="Other sources of funding:"/>
+                                <p:inputText rendered="#{conference.fundingOptions eq 'Other'}" id="otherSources" value="#{conference.otherFunding}" required="true" requiredMessage="Required Field"/>
+                                <p:message for="otherSources" />
                             </h:panelGrid>
 
-                            <h:panelGrid columns="2" columnClasses="label, value">
+                            <h:panelGrid columns="3" columnClasses="label, value, error">
                                 <p:outputLabel for="costCentre" value="Cost centre:"/>
-                                <p:inputMask mask="999999-9999" id="costCentre" value="#{conference.costCentre}"/>
+                                <p:inputText id="costCentre" value="#{conference.quotes.costcenter}" readonly="true"/>
+                                <br />
 
-                                <p:outputLabel for="fund" value="Fund:"/>
+                                <p:outputLabel for="fund" value="Fund Name:"/>
                                 <p:inputText id="fund" value="#{conference.fundName}"/>
+                                <p:message for="fund" />
+
                             </h:panelGrid>
 
                             <p:commandButton value="Submit" update="growl" action="#{conference.save()}" ajax="false"/>
