--- a/branches/piet/mtams/mtams/mtams-war/web/createAccount.xhtml
+++ b/branches/piet/mtams/mtams/mtams-war/web/createAccount.xhtml
@@ -36,21 +36,23 @@
                     <p:messages id="createMessages" closable="true" showDetail="true" severity="error" autoUpdate="true" globalOnly="true"/>
                     <h:panelGrid columns="3" id="panel"> 
                        
-                        <h:outputLabel for="userN" value="Username"/>
-                        <p:inputText id="userN" value="#{adminBean.username}" required="true" requiredMessage="Username required">                  
-                            <p:ajax update="msgUser" event="keyup" />
+                        <h:outputLabel for="userN" value="Username: *"/>
+                        <p:inputText id="userN" value="#{adminBean.username}" label="Username" required="true" requiredMessage="Username required">                  
+                            <f:validateLength minimum="3"/>
+                            <p:ajax update="msgUser" event="keyup" async="true"/>                            
                         </p:inputText>
                         <p:message for="userN" id="msgUser" />  
                         
-                        <h:outputLabel for="pwd1" value="Password:" />  
-                        <p:password id="pwd1" value="#{adminBean.password}" label="Password" required="true" requiredMessage="Password doesn't match">  
-                            <p:ajax update="msgPass" event="keyup"/>
+                        <h:outputLabel for="pwd1" value="Password: *" />  
+                        <p:password id="pwd1" value="#{adminBean.password}" match="pwd2" feedback="true" inline="true" label="Password" required="true" requiredMessage="Enter password">  
+                            <f:validateLength minimum="5"/>                            
+                            <p:ajax update="msgPass, msgPass2" event="blur" async="true"/>
                         </p:password>
                         <p:message for="pwd1" id="msgPass"/>
 
-                        <h:outputLabel for="pwd2" value="Verify Password:" />  
-                        <p:password id="pwd2" value="#{adminBean.password}" match="pwd1" label="Verify Password" required="true" requiredMessage="Password doensn't match">  
-                            <p:ajax update="msgPass2" event="keyup"/>
+                        <h:outputLabel value="Verify Password: *" />  
+                        <p:password id="pwd2" value="#{adminBean.vpassword}" label="Verify Password" required="true" requiredMessage="Verify Password">  
+                            <p:ajax update="msgPass2, msgPass" event="blur" async="true"/>
                         </p:password>
                         <p:message for="pwd2" id="msgPass2" />
 
@@ -62,7 +64,7 @@
                         <p:message for="roles"  />
 
                         <p:button value="Cancel"  outcome="#{adminBean.goViewAll()}"/> 	
-                        <p:commandButton value="Create"  update="panel" action="#{adminBean.createAccount()}"/>
+                        <p:commandButton value="Create"  update="panel" action="#{adminBean.createAccount()}" ajax="false"/>
                     </h:panelGrid> 
                 </h:form>
             </fieldset>
